# agent-immo

./: .cursorrules  .env.example  .gitignore  .ruff.toml  README.md  extract_pdf_text.py  pyproject.toml  requirements.txt
backend/: __init__.py  config.py  workflow.py
backend/agents/: __init__.py  common_tools.py  graph.py  state.py
backend/agents/city_information/: __init__.py  agent.py  prompt.py  state.py
backend/api/: __init__.py  main.py
backend/api/endpoints/: __init__.py  analyze.py  city_information.py  report.py  status.py
backend/api/models/: __init__.py  request.py  response.py
backend/utils/: __init__.py  cadastre.py  dvf.py  langsmith_init.py  pdf_generator.py  plotting.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.svelte
frontend/src/components/: AnalysisForm.svelte  ResultsDisplay.svelte  StatusDisplay.svelte
frontend/src/pages/: CityInformation.svelte  Home.svelte
notebooks/: test_agents.ipynb  test_cadastre.ipynb  test_dvf.ipynb
tests/: test_agents.py  test_endpoints.py
