[project]
name = "agent-immo"
version = "0.1.0"
description = "Application d'analyse immobilière avec agents LangGraph"
authors = [{name = "Your Name", email = "you@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "reportlab>=4.0.7",
    "matplotlib>=3.8.2",
    "plotly>=5.18.0",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.0",
    "langgraph>=1.0.3",
    "langchain>=1.0.7",
    "langchain-openai>=1.0.3",
    "langchain-ollama>=1.0.0",
    "pypdf>=6.3.0",
    "fastapi>=0.121.3",
    "httpx>=0.28.1",
    "duckduckgo-search>=8.1.1",
    "langchain-community>=0.4.1",
    "ddgs>=9.10.0",
    "langchain-mistralai>=1.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "ruff>=0.14.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []
